--- a/static/css/sample.css
+++ b/static/css/sample.css
@@ -20,3 +20,11 @@ h2{
     border: black 1px solid;
 
 }
+textarea {
+    border: none;
+    resize: none;
+}
+h4{
+    min-height: 30px;
+    border: black 1px dotted;
+}
