--- a/templates/boards.html
+++ b/templates/boards.html
@@ -20,7 +20,8 @@
 <body>
 <h1>ProMan</h1>
 <div id="boards">Boards are loading...</div>
-<button id="register-button"></button>
+<button id="register-button" class="btn btn-outline-secondary">Registration</button>
+<button id="login-button" class="btn btn-outline-secondary">Login</button>
 <!-- Modal -->
 <div id="registration" class="popup">
     <div class="popup-content">
@@ -30,7 +31,7 @@
         </div>
         <hr>
         <div class="popup-body">
-            <form class="form-inline" action="/registration" method="POST">
+            <form action="/registration" method="POST">
                 <div class="form-group row">
                     <label for="username" class="col-sm-2 col-form-label">Username</label>
                     <div class="col-sm-10">
@@ -67,7 +68,45 @@
         </div>
     </div>
 </div>
-
+<!-- Modal -->
+<div id="login" class="popup">
+    <div class="popup-content">
+        <div class="popup-header">
+            <h3 id="popup-header">Login form</h3>
+            <span class="close">&times;</span>
+        </div>
+        <hr>
+        <div class="popup-body">
+            <form action="/login" method="POST">
+                <div class="form-group row">
+                    <label for="username" class="col-sm-2 col-form-label">Username</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" name="username" id="username" placeholder="Username"
+                               required autofocus>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="password1" class="col-sm-2 col-form-label">Password</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" name="password1" id="password1"
+                               placeholder="Password" required>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-10">
+                        <button type="submit" class="btn btn-outline-secondary">Login</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <hr>
+        <div class="popup-footer">
+            <p>
+                <button class="btn btn-outline-secondary close">Close</button>
+            </p>
+        </div>
+    </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
