--- a/templates/boards.html
+++ b/templates/boards.html
@@ -6,7 +6,7 @@
 
     <nav class="navbar navbar-light bg-light">
   <span class="navbar-text">
-    Fancy Proman logo here
+    PROMAN LOGO
   </span>
         <button id="newBoardBtn" type="button" class="btn btn-success"> + New Board</button>
     </nav>
