--- a/templates/boards.html
+++ b/templates/boards.html
@@ -14,6 +14,7 @@
     <script src="{{ url_for('static', filename='js/dom.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/create_dom.js') }}" defer type="module"></script>
+    <script src="{{ url_for('static', filename='js/cards.js') }}" defer type="module"></script>
 </head>
 <body>
 <h1>ProMan</h1>
