--- a/templates/modal_login.html
+++ b/templates/modal_login.html
@@ -10,14 +10,14 @@
                 <div class="form-group row">
                     <label for="username" class="col-sm-2 col-form-label">Username</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="username" id="username" placeholder="Username"
+                        <input type="text" class="form-control" name="username" id="username_reg" placeholder="Username"
                                required autofocus>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="password1" class="col-sm-2 col-form-label">Password</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" name="password1" id="password1"
+                        <input type="password" class="form-control" name="password1" id="password"
                                placeholder="Password" required>
                     </div>
                 </div>
