--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,11 +10,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/modal_login.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/modal_new_board.css') }}">
+
     <script src="{{ url_for('static', filename='js/data_handler.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/dom.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/create_dom.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/modal_new_board.js') }}" defer type="module"></script>
+    <script src="{{ url_for('static', filename='js/modal_login.js') }}" defer type="module"></script>
 </head>
 <body>
 
