cards.js script added

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,6 +19,7 @@
     <script src="{{ url_for('static', filename='js/create_dom.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/modal_new_board.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/modal_login.js') }}" defer type="module"></script>
+    <script src="{{ url_for('static', filename='js/cards.js') }}" defer type="module"></script>
 </head>
 <body>
 
