--- a/templates/layout.html
+++ b/templates/layout.html
@@ -48,7 +48,9 @@
     </div>
 </nav>
 
-
+<div id="boards"></div>
+{% include 'modal_login.html' %}
+{% include 'modal_register.html' %}
 
 
 {% block main %}{% endblock %}
