--- a/static/css/modal_login.css
+++ b/static/css/modal_login.css
@@ -5,7 +5,7 @@
     position: fixed;
     z-index: 1;
     left: 0;
-    top: 0;
+    top: 80px;
     width: 40%;
     height: 100%;
     overflow: auto;
