--- a/templates/boards.html
+++ b/templates/boards.html
@@ -6,7 +6,7 @@
 
     <nav class="navbar navbar-light bg-light">
   <span class="navbar-text">
-    PROMAN LOGO
+    <img alt="ProMan logo" src="{{ url_for('static', filename='images/proman.png') }}" width="300px">
   </span>
         <button id="newBoardBtn" type="button" class="btn btn-success"> + New Board</button>
     </nav>
