--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
     <script src="{{ url_for('static', filename='js/data_handler.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/dom.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}" defer type="module"></script>
-    <script src="{{ url_for('static', filename='js/create_dom.js') }}" defer type="module"></script>
+    <script src="{{ url_for('static', filename='js/boards.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/modal_new_board.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/modal_login.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/cards.js') }}" defer type="module"></script>
