added presentation mode

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,6 +21,7 @@
     <script src="{{ url_for('static', filename='js/modal_new_board.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/modal_login.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/cards.js') }}" defer type="module"></script>
+    <script src="{{ url_for('static', filename='js/test.js') }}" defer type="module"></script>
 </head>
 <body>
 
@@ -56,7 +57,7 @@
 {% include 'modal_register.html' %}
 
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
