--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,3 +34,10 @@ h4{
     padding: 3px;
 }
 
+h1 {
+    font-size: 70px;
+    margin: auto;
+    color: black;
+    text-align: center;
+    padding: 20px;
+}
