--- a/templates/boards.html
+++ b/templates/boards.html
@@ -4,12 +4,9 @@
 
 {% block main %}
 
-    <nav class="navbar navbar-light bg-light">
-  <span class="navbar-text">
-    <img alt="ProMan logo" src="{{ url_for('static', filename='images/proman.png') }}" width="300px">
-  </span>
-        <button id="newBoardBtn" type="button" class="btn btn-success"> + New Board</button>
-    </nav>
+    <div class="newBoardButtonDiv">
+        <button id="newBoardBtn" type="button" class="float-right btn btn-success"> + New Board</button>
+    </div>
 
     <div id="newBoardModal" class="modal">
         <div class="modal-content">
