--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -24,22 +25,23 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #ffdd80;">
-    <a class="navbar-brand" href="#">Proman</a>
+<nav class="proman-nav navbar navbar-expand-lg sticky-top">
+    <a class="proman-logo-text navbar-brand" href="#">
+        <img alt="ProMan logo" src="{{ url_for('static', filename='images/proman.png') }}" width="200px"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#" id="register-button">Registration</a>
+            <li class="nav-item ">
+                <a class="nav-link proman-text" href="#" id="register-button">Registration</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" id="login-button" >Login</a>
+                <a class="nav-link proman-text" href="#" id="login-button" >Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Logout</a>
+                <a class="nav-link proman-text" href="#">Logout</a>
             </li>
         </ul>
         <nav class="nav-item active">
