--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
@@ -26,7 +27,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #ffdd80;">
     <a class="navbar-brand" href="#">Proman</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -36,7 +38,7 @@
                 <a class="nav-link" href="#" id="register-button">Registration</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" id="login-button" >Login</a>
+                <a class="nav-link" href="#" id="login-button">Login</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" href="#">Logout</a>
@@ -54,7 +56,6 @@
 <div id="boards"></div>
 {% include 'modal_login.html' %}
 {% include 'modal_register.html' %}
-
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
