--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="manifest" href="/manifest.json"/>
     <title>{% block title %}{% endblock %}</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -22,6 +23,21 @@
     <script src="{{ url_for('static', filename='js/modal_new_board.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/modal_login.js') }}" defer type="module"></script>
     <script src="{{ url_for('static', filename='js/cards.js') }}" defer type="module"></script>
+
+    <script>
+		const PATH = '/service-worker.js';
+
+		let isServiceWorkersSupport = ('serviceWorker' in navigator);
+
+		if (isServiceWorkersSupport) {
+			console.log('Will service worker register?');
+			navigator.serviceWorker.register(PATH).then(function () {
+				console.log("Yes it did.");
+			}).catch(function (err) {
+				console.log("No it didn't. This happened: ", err)
+			});
+		}
+    </script>
 </head>
 <body>
 
