serwice-worker try2

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,7 +25,7 @@
     <script src="{{ url_for('static', filename='js/cards.js') }}" defer type="module"></script>
 
     <script>
-		const PATH = '../service-worker.js';
+		const PATH = 'templates/service-worker.js';
 
 		let isServiceWorkersSupport = ('serviceWorker' in navigator);
 
