--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,18 +25,18 @@
     <script src="{{ url_for('static', filename='js/cards.js') }}" defer type="module"></script>
 
     <script>
-		const PATH = 'static/js/service-worker.js';
+	    const PATH = 'service-worker.js';
 
-		let isServiceWorkersSupport = ('serviceWorker' in navigator);
+	    let isServiceWorkersSupport = ('serviceWorker' in navigator);
 
-		if (isServiceWorkersSupport) {
-			console.log('Will service worker register?');
-			navigator.serviceWorker.register(PATH).then(function () {
-				console.log("Yes it did.");
-			}).catch(function (err) {
-				console.log("No it didn't. This happened: ", err)
-			});
-		}
+	    if(isServiceWorkersSupport) {
+		    console.log('Will service worker register?');
+		    navigator.serviceWorker.register(PATH).then(function () {
+			    console.log("Yes it did.");
+		    }).catch(function (err) {
+			    console.log("No it didn't. This happened: ", err)
+		    });
+	    }
     </script>
 </head>
 <body>
